-------------------------
 Change history for MOST
-------------------------

Version:    1.0

MOST
Copyright (c) 2015-2016, Power Systems Engineering Research Center (PSERC)
See https://github.com/MATPOWER/most for more info.


Changes since 5/21/15
---------------------

12/16/16
    - Released 1.0.
    - Moved development to GitHub <https://github.com/MATPOWER/most>.

3/1/16
    - Put checks in loadmd() and most() to require internal bus ordering
      for mpc, plus explicit notes in documentation.

2/26/16
    - Rename example files in most/t to start with ex_ instead of eg_.

2/25/16
    - Add MATPOWER option 'most.fixed_res' with default of -1 (depends
      on presence of md.FixedReserves) to control md.IncludeFixedReserves.
    - Move fixed zonal reserve output fields (R, prc, mu.l, m.u, m.Pmax,
      totalcost) from mdo.FixedReserves(t,j,k) to mdo.flow(t,j,k).mpc.reserves.

2/24/16
    - Add most_summary() function to summarize and print some summary
      results. Moved from some of the test files into its own public
      function. (Still very incomplete).
    - For consistency, rename MOST data struct variables everywhere to
      mdi (input) from Istr, md_in, and mdin, and to mdo (output) from
      Ostr, md_out, and mdout.
    - Rename md.idx fields for dimensions of dynamic system constraints.
        nyo  -->  nyds
        nzd  -->  nzds
        nyt  -->  ntds

2/22/16
    - (Tentatively) modify md_init() to initialize only what is needed to
      run loadmd() and most().

1/26/16
    - Renamed mops to most, and re-wrote history below accordingly.

12/18/15
    - Fixed fatal crash triggered by failed solve with verbose option off.

12/9/15
    - Added ExpectedTerminalStorageMax, ExpectedTerminalStorageMin to
      md.Storage and StorageData structs. If present ExpectedTerminalStorageAim
      now simply overwrites both.

10/27/15
    - Renamed apply_contingency() to apply_changes() and moved from sopf
      to matpower.

7/17/15