@@ -1,0 +1,25 @@
+sudo: required
+dist: xenial
+
+language: generic
+
+install:
+- sudo apt-add-repository -y ppa:octave/stable
+- sudo apt-get update -qq
+- sudo apt-get install -qq octave liboctave-dev
+- sudo git clone --depth=50 https://github.com/MATPOWER/mptest.git $TRAVIS_BUILD_DIR/mptest
+- sudo git clone --depth=50 https://github.com/MATPOWER/mips.git $TRAVIS_BUILD_DIR/mips
+- sudo git clone --depth=50 https://github.com/MATPOWER/matpower.git $TRAVIS_BUILD_DIR/matpower
+
+env:
+  global:
+    - MOST_PATH=$TRAVIS_BUILD_DIR/lib:$TRAVIS_BUILD_DIR/lib/t
+    - MPTEST_PATH=$TRAVIS_BUILD_DIR/mptest/lib:$TRAVIS_BUILD_DIR/mptest/lib/t
+    - MIPS_PATH=$TRAVIS_BUILD_DIR/mips/lib:$TRAVIS_BUILD_DIR/mips/lib/t
+    - MATPOWER_PATH=$TRAVIS_BUILD_DIR/matpower/lib:$TRAVIS_BUILD_DIR/matpower/lib/t
+    - SEARCH_PATH=$MOST_PATH:$MPTEST_PATH:$MIPS_PATH:$MATPOWER_PATH
+
+script:
+- octave-cli --no-gui -p $SEARCH_PATH --eval ver
+- octave-cli --no-gui -p $SEARCH_PATH --eval mpver
+- octave-cli --no-gui -p $SEARCH_PATH --eval "test_most(0,1)"
